--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
     <title></title>
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <a href="https://1s8b8rpe0elm6h9jjrg5so03jao8i0uaavur8k800scco2j2rh5g.cc-propeller.cloud/#">Download Excursion (Comming soon)</a>
+    <p><h1>Discover hidden places in the world around you</h1></p>
+        <p><a class="download" href="#">Download Excursion (Coming soon!)</a></p>
+    <video autoplay muted loop>
+      <source src="resources/videos/excursion.mp4" type="video/mp4">
+    </video>
+
+    <h2>Your personal travel guide</h2>
+    <p><h3>Excursion remembers places you like, and recommends new points of interest around you.</h3></p>
+
+    <p><img src="resources/images/camp.jpg"></p>
+    <p><img src="resources/images/phone.png"></p>
+
+    <h3>Coming Soon for iPhone and Android</h3>
+
   </body>
 </html>
